rhs margin left and repainr error message visibility bug

--- a/static/StqsPlus.css
+++ b/static/StqsPlus.css
@@ -88,6 +88,7 @@ body .menublock form input.loginedit {
 /* ----- MAIN ELEMENT BGC ----- */
 body #rightside {
     background-color: var(--main-color);
+    padding-left: 30px;
 }
 
 /* ----- ERROR LOGIN MESSAGE ----- */
